--- a/README
+++ b/README
@@ -1,12 +1,12 @@
 The away extension can be called with no parameter in which case the status displayed will be "Away" with a red light.  If there is a parameter passed, then the status will be set to the passed parameter:
 
-<code>away applesauce</code>
+away applesauce
 
 will result in your status being set to "applesauce" with a red light.
 
 The available extension is similar.  If no parameter is passed, then your status will be set as "Available" with a green light.  If you pass a parameter then the status will be set to the parameter like the away extension:
 
-<code>available applesauce</code>
+available applesauce
 
 will result in your status being set to "applesauce" with a green light.
 
